# ChessAI

./: .gitignore  Cargo.toml  concat_code.py
python/: plot.py
src/: gui_piston.rs  main.rs
src/game/: board.rs  defs.rs  gamestate.rs  history.rs  io.rs  mod.rs  moves.rs
src/game/board/: attacks.rs  bitboard.rs  mod.rs  movement.rs  position.rs  rankfile.rs
src/game/moves/: definitions.rs  generator.rs  magics.rs  mod.rs
src/search/: engine.rs  eval.rs  mod.rs  perft.rs  search.rs  transpose.rs
src/tools/: mod.rs
