[package]
name = "chessai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
shakmaty = "0.26"
pgn-reader = "0.25"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rand = { version = "0.8", features = ["small_rng"] }
bevy = "0.12.1"
colored = "2.1"
unicode-width = "0.1"
piston_window = "0.121.0"
find_folder = "0.3.0"
indicatif = "0.17"
serde_json = "1.0.145"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
